--- a/coaches.htm
+++ b/coaches.htm
@@ -31,7 +31,8 @@
 					</tr>
 					<tr>
 						<td>
-							<a href="https://twitter.com/SMSWannamaker" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow
+							<a href="https://twitter.com/SMSWannamaker" class="twitter-follow-button"
+								data-show-count="false" data-dnt="true">Follow
 								@SMSWannamaker</a>
 							<script>
 								! function (d, s, id) {
@@ -99,7 +100,8 @@
 						<td>&nbsp;</td>
 					</tr>
 					<tr>
-						<td><b class="style1">D.J. Hilding</b><span class="style1"><b class="style1"></b></span> - (Distance)</td>
+						<td><b class="style1">D.J. Hilding</b><span class="style1"><b class="style1"></b></span> -
+							(Distance)</td>
 					</tr>
 					<tr>
 						<td>(913) 993-0633</td>
@@ -124,24 +126,25 @@
 		</div>
 		<div class="right"></div>
 		<div class="footer"></div>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-		<script>
-			$(".mainheader").load("/header.html");
-			$(".mainmenu").load("/mainmenu.html");
-			$(".footer").load("/footer.html");
-		</script>
-		<!-- Start of StatCounter Code for Default Guide -->
-		<script type="text/javascript">
-			var sc_project = 3895026;
-			var sc_invisible = 1;
-			var sc_security = "c1dd7cc1";
-		</script>
-		<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
-		<noscript>
-			<div class="statcounter"><a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img
-					 class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
-		</noscript>
-		<!-- End of StatCounter Code for Default Guide -->
+	</div>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+	<script>
+		$(".mainheader").load("/header.html");
+		$(".mainmenu").load("/mainmenu.html");
+		$(".footer").load("/footer.html");
+	</script>
+	<!-- Start of StatCounter Code for Default Guide -->
+	<script type="text/javascript">
+		var sc_project = 3895026;
+		var sc_invisible = 1;
+		var sc_security = "c1dd7cc1";
+	</script>
+	<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
+	<noscript>
+		<div class="statcounter"><a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img
+					class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
+	</noscript>
+	<!-- End of StatCounter Code for Default Guide -->
 </body>
 
 </html>
