--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
+
 <head>
 	<script type="application/ld+json">
 			"@context": "http://schema.org",
@@ -57,7 +58,7 @@
 	<link rel="stylesheet" href="/css/jquery.countdown.css">
 
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://smstrack.org/feed.xml">
-	
+
 	<title>Shawnee Mission South Track and Field</title>
 </head>
 
@@ -67,24 +68,29 @@
 		<div class="mainmenu menubar"></div>
 		<div class="left relaysbanner"></div>
 		<div class="middle">
-			<div id="newsDisplay" style="display: none;"></div>
-			<div id="countdownDisplay" style="display: none;" class="style37">
-				<div id="countdownDisplayTitle"></div><br>
-				<div id="defaultCountdown"></div>
+			<div class="contenttext aligncenter">
+				<div id="newsDisplay" style="display: none;"></div>
+				<div id="countdownDisplay" style="display: none;" class="style37">
+					<div id="countdownDisplayTitle"></div><br>	
+					<div id="defaultCountdown"></div>
+				</div>
+				<div id="scheduleDisplay" style="display: none;"></div>
 			</div>
-			<div id="scheduleDisplay" style="display: none;"></div>
 		</div>
 		<div class="right">
 			<div valign="top" class="style23 indexscroll scrollLine">
 				<script src="/js/vscroll.js"></script>
 			</div>
-			<div class="style24 style28" style="display:none; background: #0c6e45; text-align:center; font-family:sans-serif;font-weight:bold">
-				<a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true"><img title="Team Store" width="178px"
-						src="https://assetly.ordermygear.com/images/w_180,h_100,c_limit/5a71513f1d9d9268258b467c.png" alt="Team Store"></a>
+			<div class="style24 style28"
+				style="display:none; background: #0c6e45; text-align:center; font-family:sans-serif;font-weight:bold">
+				<a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true"><img
+						title="Team Store" width="178px"
+						src="https://assetly.ordermygear.com/images/w_180,h_100,c_limit/5a71513f1d9d9268258b467c.png"
+						alt="Team Store"></a>
 				<a target="_blank" href="https://smsouthtrack18.itemorder.com/sale?read_message=true">Team Store</a>
 			</div>
 			<div class="style27" style="display:none;">
-				<a target="_blank" href="sponsors/index.htm">Visit Our Sponsors</a></span></p>
+				<a target="_blank" href="sponsors/index.htm">Visit Our Sponsors</a>
 			</div>
 		</div>
 		<div class="footer"></div>
@@ -96,7 +102,8 @@
 	<script src="/js/schedfp.js"></script>
 	<script src="/js/frontpage.js"></script>
 	<script src="https://apis.google.com/js/client.js?onload=loadGoogleData"></script>
-	<script src="https://www.googleapis.com/blogger/v3/blogs/484182122543119585/posts?callback=handleResponse&key=AIzaSyDPyjKbAMmWr1pexjS4iUPoq4W2EJUsFyE"></script>
+	<script
+		src="https://www.googleapis.com/blogger/v3/blogs/484182122543119585/posts?callback=handleResponse&key=AIzaSyDPyjKbAMmWr1pexjS4iUPoq4W2EJUsFyE"></script>
 	<script>
 		$(".mainheader").load("/header.html");
 		$(".mainmenu").load("/mainmenu.html");
@@ -109,13 +116,13 @@
 		var sc_project = 3895026;
 		var sc_invisible = 1;
 		var sc_security = "c1dd7cc1";
-		</script>
+	</script>
 	<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
 	<noscript>
 		<div class="statcounter"><a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img
-			class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
-		</noscript>
-		<!-- End of StatCounter Code for Default Guide -->
+					class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
+	</noscript>
+	<!-- End of StatCounter Code for Default Guide -->
 </body>
 
 </html>
