--- a/links.htm
+++ b/links.htm
@@ -1,121 +1,110 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en-us">
 
 <head>
 	<meta http-equiv="Content-Language" content="en-us">
 	<meta name="description" content="Shawnee Mission South High School Track &amp; Field">
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<link rel="stylesheet" type="text/css" href="/css/sms.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Links</title>
-	<link rel="stylesheet" type="text/css" href="css/sms.css">
-	<style type="text/css">
-		.style23 {
-			text-align: center;
-		}
-	</style>
 </head>
 
 <body>
-	<div class="mainheader"></div>
-	<div class="maindiv">
-		<table border="0" cellpadding="0" cellspacing="0" width="100%">
-			<tr>
-				<td valign="top" width="100%">
-					<p>&nbsp;</p>
-					<h2 align="center">
-						<b>
-							<font face="Times New Roman" class="contentheader">
-								Links</font>
-						</b>
-					</h2>
-					<div align="center">
-						<center>
-							<table border="0" id="table3">
-								<tr>
-									<td>
-										<p align="left">
-											<a target="_blank" href="http://smsxc.wordpress.com/" class="style1">Shawnee Mission South Cross Country</a>
-										</p>
-									</td>
-								</tr>
-								<tr>
-									<td>
-									</td>
-								</tr>
-								<tr>
-									<td><a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwaXlzdGhCdkJWWm8/view?usp=sharing">
-											All-Time Kansas High School Performances</a> (2014)</td>
-								</tr>
-								<tr>
-									<td><a target="_blank" href="http://www.kcctfca.org/Results/StateTFResults/statetfresults.html">
-											All-Time Kansas State Meet Results </a></td>
-								</tr>
-								<tr>
-									<td><a target="_blank" href="http://www.kansasaau.com/">Kansas
-											AAU Meets </a></td>
-								</tr>
-								<tr>
-									<td>
-										<p align="left">
-											<a href="http://www.tickertiming.com" target="_blank">Ticker
-												Timing</a>
-										</p>
-									</td>
-								</tr>
-								<tr>
-									<td><a target="_blank" href="http://www.catchitkansas.com/sports/track-field">CATCHiT
-											KANSAS Track &amp Field</a></td>
-								</tr>
-								<tr>
-									<td><a target="_blank" href="http://ks.milesplit.com/">Kansas
-											Mile Split</a></td>
-								</tr>
-								<tr>
-									<td><a target="_blank" href="http://www.dyestat.com">DyeStat</a></td>
-								</tr>
-								<tr>
-									<td><a target="_blank" href="http://www.trackandfieldnews.com">Track &amp;
-											Field News </a></td>
-								</tr>
-								<tr>
-									<td><a target="_blank" href="http://www.flotrack.org/">Flotrack</a></td>
-								</tr>
-								<tr>
-									<td><a target="_blank" href="http://macthrowvideo.com/">Mac
-											Throw Video Dedicated to Throwers </a></td>
-								</tr>
-								<tr>
-									<td><a target="_blank" href="http://www.runningmovies.com">Running Movies.com </a></td>
-								</tr>
-								<tr>
-									<td><a target="_blank" href="http://www.iaaf.org">IAAF
-											- World Hdqtrs for Athletics </a></td>
-								</tr>
-								<tr>
-									<td><a target="_blank" href="http://www.distancerunning.com/">Nat'l Dist.
-											Running Hall of Fame </a></td>
-								</tr>
-								<tr>
-									<td>
-										<p align="left">
-											<a href="http://www.kuathletics.com/index.aspx?path=relay&" target="_blank">Kansas Relays</a>
-									</td>
-								</tr>
-							</table>
-						</center>
-				</td>
-				<td height="273"></td>
-			</tr>
-			<tr>
-				<td>
-					<p>&nbsp;</p>
-				</td>
-			</tr>
-		</table>
+	<div class="maindiv grid-container">
+		<div class="mainheader"></div>
+		<div class="mainmenu menubar"></div>
+		<div class="left"></div>
+		<div class="middle">
+			<div class="contentheader">Links</div>
+			<div class="contenttext">
+				<table border="0" id="table3">
+					<tr>
+						<td>
+							<p align="left">
+								<a target="_blank" href="http://smsxc.wordpress.com/" class="style1">Shawnee Mission
+									South
+									Cross Country</a>
+							</p>
+						</td>
+					</tr>
+					<tr>
+						<td>
+						</td>
+					</tr>
+					<tr>
+						<td><a target="_blank"
+								href="https://drive.google.com/file/d/0B4e6HoJZumBwaXlzdGhCdkJWWm8/view?usp=sharing">
+								All-Time Kansas High School Performances</a> (2014)</td>
+					</tr>
+					<tr>
+						<td><a target="_blank" href="http://www.kcctfca.org/Results/StateTFResults/statetfresults.html">
+								All-Time Kansas State Meet Results </a></td>
+					</tr>
+					<tr>
+						<td><a target="_blank" href="http://www.kansasaau.com/">Kansas
+								AAU Meets </a></td>
+					</tr>
+					<tr>
+						<td>
+							<p align="left">
+								<a href="http://www.tickertiming.com" target="_blank">Ticker
+									Timing</a>
+							</p>
+						</td>
+					</tr>
+					<tr>
+						<td><a target="_blank" href="http://www.catchitkansas.com/sports/track-field">CATCHiT
+								KANSAS Track &amp Field</a></td>
+					</tr>
+					<tr>
+						<td><a target="_blank" href="http://ks.milesplit.com/">Kansas
+								Mile Split</a></td>
+					</tr>
+					<tr>
+						<td><a target="_blank" href="http://www.dyestat.com">DyeStat</a></td>
+					</tr>
+					<tr>
+						<td><a target="_blank" href="http://www.trackandfieldnews.com">Track &amp;
+								Field News </a></td>
+					</tr>
+					<tr>
+						<td><a target="_blank" href="http://www.flotrack.org/">Flotrack</a></td>
+					</tr>
+					<tr>
+						<td><a target="_blank" href="http://macthrowvideo.com/">Mac
+								Throw Video Dedicated to Throwers </a></td>
+					</tr>
+					<tr>
+						<td><a target="_blank" href="http://www.runningmovies.com">Running Movies.com </a></td>
+					</tr>
+					<tr>
+						<td><a target="_blank" href="http://www.iaaf.org">IAAF
+								- World Hdqtrs for Athletics </a></td>
+					</tr>
+					<tr>
+						<td><a target="_blank" href="http://www.distancerunning.com/">Nat'l Dist.
+								Running Hall of Fame </a></td>
+					</tr>
+					<tr>
+						<td>
+							<p align="left">
+								<a href="http://www.kuathletics.com/index.aspx?path=relay&" target="_blank">Kansas
+									Relays</a>
+							</p>
+						</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div class="right"></div>
+		<div class="footer"></div>
 	</div>
-	<div class="footer"></div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script>
 		$(".mainheader").load("/header.html");
+		$(".mainmenu").load("/mainmenu.html");
 		$(".footer").load("/footer.html");
 	</script>
 	<!-- Start of StatCounter Code for Default Guide -->
@@ -127,8 +116,8 @@
 	<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
 	<noscript>
 		<div class="statcounter">
-			<a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/"
-				 alt="web stats"></a>
+			<a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img class="statcounter"
+					src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a>
 		</div>
 	</noscript>
 	<!-- End of StatCounter Code for Default Guide -->
