--- a/pictures.htm
+++ b/pictures.htm
@@ -1,75 +1,57 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+<!DOCTYPE html>
+<html lang="en-us">
 
 <head>
 	<meta http-equiv="Content-Language" content="en-us">
 	<meta name="description" content="Shawnee Mission South High School Track &amp; Field">
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<title>Pictures</title>
-	<style type="text/css">
-		.style23 {
-			text-align: center;
-		}
-
-		.style24 {
-			text-align: center;
-			color: rgb(0, 102, 0);
-		}
-
-		.style25 {
-			font-family: Arial, Helvetica, sans-serif;
-			color: #006600;
-		}
-	</style>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" type="text/css" href="/css/sms.css">
-	<style type="text/css">
-		.style23 {
-			text-align: center;
-		}
-	</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Pictures</title>
 </head>
 
 <body>
-	<div class="mainheader"></div>
-	<div class="maindiv">
-		<table border="0" cellpadding="0" cellspacing="0" width="100%">
-			<!-- MSTableType="layout" -->
-			<tr>
-				<td valign="top" width="100%">
-					<!-- MSCellType="ContentBody" -->
-					<!-- #BeginEditable "content" -->
-					<p>&nbsp;</p>
-					<p align="center" class="style24" style="margin-top: 0px; ">
-						<a target="_blank" href="http://www.smstf.shutterfly.com/">Shutterfly</a> (password = smstf)</p>
-					<p align="center" class="style24" style="margin-top: 0px; ">
-						<span class="Apple-converted-space">&nbsp;</span><a target="_blank" href="http://www.zebrasportsphotos.com/">The
-							Zebras Sports Photography</a></p>
-					<p align="center" class="style24" style="margin-top: 0px; ">
-						Also</p>
-					<p align="center" class="style23" style="color: rgb(0, 102, 0); margin-top: 0px; ">
-						<a target="_blank" href="http://shawneemissionsouthtrackfield.shutterfly.com/">
-							Shutterfly (old)</a>&nbsp; Password=smstrack
-					</p>
-					<p align="center" class="style23" style="color: rgb(0, 102, 0);  ">
-						Photos Courtesy of Eli Reichman<span class="Apple-converted-space">&nbsp;@ </span><a target="_blank" href="http://www.eliphoto.com/">www.eliphoto.com</a></p>
-					<p align="center" class="style23" style="color: rgb(0, 102, 0); ">
-						&nbsp;</p>
-
-					<!-- #EndEditable -->
-				</td>
-				<td height="273"></td>
-			</tr>
-			<tr>
-				<td>
-					<p>&nbsp;</p>
-				</td>
-			</tr>
-		</table>
+	<div class="maindiv grid-container">
+		<div class="mainheader"></div>
+		<div class="mainmenu menubar"></div>
+		<div class="left"></div>
+		<div class="middle">
+			<div class="contentheader">Pictures</div>
+			<table border="0" cellpadding="0" cellspacing="0" width="100%">
+				<!-- MSTableType="layout" -->
+				<tr>
+					<td valign="top" width="100%">
+						<!-- MSCellType="ContentBody" -->
+						<!-- #BeginEditable "content" -->
+						<p align="center" class="style24" style="margin-top: 0px; ">
+							<a target="_blank" href="http://www.smstf.shutterfly.com/">Shutterfly</a> (password = smstf)
+						</p>
+						<p align="center" class="style24" style="margin-top: 0px; ">
+							<span class="Apple-converted-space">&nbsp;</span><a target="_blank"
+								href="http://www.zebrasportsphotos.com/">The
+								Zebras Sports Photography</a></p>
+						<p align="center" class="style24" style="margin-top: 0px; ">
+							Also</p>
+						<p align="center" class="style23" style="color: rgb(0, 102, 0); margin-top: 0px; ">
+							<a target="_blank" href="http://shawneemissionsouthtrackfield.shutterfly.com/">
+								Shutterfly (old)</a>&nbsp; Password=smstrack
+						</p>
+						<p align="center" class="style23" style="color: rgb(0, 102, 0);  ">
+							Photos Courtesy of Eli Reichman<span class="Apple-converted-space">&nbsp;@ </span><a
+								target="_blank" href="http://www.eliphoto.com/">www.eliphoto.com</a></p>
+					</td>
+					<td ></td>
+				</tr>
+			</table>
+		</div>
+		<div class="right"></div>
+		<div class="footer"></div>
 	</div>
-	<div class="footer"></div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 	<script>
 		$(".mainheader").load("/header.html");
+		$(".mainmenu").load("/mainmenu.html");
 		$(".footer").load("/footer.html");
 	</script>
 	<!-- Start of StatCounter Code for Default Guide -->
@@ -81,7 +63,7 @@
 	<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
 	<noscript>
 		<div class="statcounter"><a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img
-				 class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
+					class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
 	</noscript>
 	<!-- End of StatCounter Code for Default Guide -->
 </body>
