--- a/throws/throwsheader.html
+++ b/throws/throwsheader.html
@@ -3,9 +3,9 @@
   onclick="location.href='/throws/index.htm'"
   style="cursor:pointer; z-index: 1"
 >
-  <div style="text-align: left">
+  <!-- <div style="text-align: left">
     <div class="titletext">
      Shawnee Mission South<br>Shot & Disc
     </div>
-  </div>
+  </div> -->
 </div>
