--- a/throws/formchart.htm
+++ b/throws/formchart.htm
@@ -1,113 +1,58 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en-US">
 
 <head>
-	<meta http-equiv="Content-Language" content="en-us">
-	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field, mike naster, ">
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="description" content="Shawnee Mission South High School Track &amp; Field" />
+	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+	<link rel="stylesheet" href="/css/sms.css" />
+	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://smstrack.org/feed.xml" />
+
 	<title>Shot/Disc Meet Sheets</title>
-	<link rel="stylesheet" type="text/css" href="/css/sms.css">
 </head>
 
 <body>
-	<div class="throwsheader"></div>
-	<div class="content">
-		<table class="style101" border="0" cellpadding="0" cellspacing="0" width="100%">
-			<tr>
-				<td valign="top" width="100%" align="center">
-					<table class="style101" border="0" cellpadding="0" cellspacing="0" width="100%">
-						<tr align="center">
-							<td valign="top" width="100%">
-								<p align="center">&nbsp;</p>
-								<h2 align="center">Meet Sheets</h2>
-								<p>(<span style="background-color: yellow">PB</span>)-Personal Best, (<span style="background-color: lime">SB</span>)-Seasonal
-									Best</p>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<iframe width="800" height="400" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSeWXUJYsoLNo0hYTA0x8MYbVDVGKZPb1VDsSlmwG1vw5mwhc2-QuMV8Z-bd0Xs9O_bH0ae_BjmUM5e/pubhtml?widget=true&amp;headers=false"></iframe>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<p>&nbsp;</p>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<p>***</p>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<p>&nbsp;</p>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<iframe width="800" height="400" src="https://docs.google.com/spreadsheets/d/1VZXghLeVreIW3OuEn0H7-aFkKPJoF4kVz8vdvYmW1ok/pubhtml?widget=true&amp;headers=false"></iframe>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<p>&nbsp;</p>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<p>***</p>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<p>&nbsp;</p>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<iframe width="800" height="400" src="https://docs.google.com/spreadsheets/d/1J30umoVcISBtJMH_FJAe5bgNI0p71Fz8Ne68Z-6L-uM/pubhtml?widget=true&amp;headers=false"></iframe>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<p>&nbsp;</p>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<p>---</p>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<p>&nbsp;</p>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<iframe width="800" height="400" src="https://docs.google.com/spreadsheets/d/1Z6lrbEM2hgOn6e4fsSFHjAWgluzS_q5L1z6A7-gF6Hw/pubhtml?widget=true&amp;headers=false"></iframe>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<p>&nbsp;</p>
-							</td>
-						</tr>
-					</table>
-				</td>
-				<td height="273"></td>
-			</tr>
-			<tr>
-				<td>
-					<p>&nbsp;</p>
-				</td>
-			</tr>
-		</table>
+	<div class="maindiv grid-container">
+		<div class="throwsheader mainheader"></div>
+		<div class="throwsmenu mainmenu menubar"></div>
+		<div class="left"></div>
+		<div class="middle">
+			<div class="content">
+				<div class="contentheader">Meet Sheets</div>
+				<div class="aligncenter">
+					<div class="iframediv"> 
+						<iframe  class="iframeabs" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSeWXUJYsoLNo0hYTA0x8MYbVDVGKZPb1VDsSlmwG1vw5mwhc2-QuMV8Z-bd0Xs9O_bH0ae_BjmUM5e/pubhtml?widget=true&amp;headers=false"></iframe>
+					</div>
+					<p>***</p>
+					<div class="iframediv">
+						<iframe  class="iframeabs"
+							src="https://docs.google.com/spreadsheets/d/1VZXghLeVreIW3OuEn0H7-aFkKPJoF4kVz8vdvYmW1ok/pubhtml?widget=true&amp;headers=false"></iframe>
+					</div>
+					<p>***</p>
+					<div class="iframediv">
+						<iframe  class="iframeabs"
+							src="https://docs.google.com/spreadsheets/d/1J30umoVcISBtJMH_FJAe5bgNI0p71Fz8Ne68Z-6L-uM/pubhtml?widget=true&amp;headers=false"></iframe>
+					</div>
+					<p>***</p>
+					<div class="iframediv">
+						<iframe  class="iframeabs"
+							src="https://docs.google.com/spreadsheets/d/1Z6lrbEM2hgOn6e4fsSFHjAWgluzS_q5L1z6A7-gF6Hw/pubhtml?widget=true&amp;headers=false"></iframe>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="right"></div>
+		<div class="footer"></div>
 	</div>
-	<div class="footer"></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
 		$(".throwsheader").load("/throws/throwsheader.html");
+		$(".throwsmenu").load("/throws/throwsmenu.html");
 		$(".footer").load("/footer.html");
-	</script></body>
+	</script>
+</body>
+
 </html>
