--- a/throws/videos.htm
+++ b/throws/videos.htm
@@ -1,47 +1,52 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en-US">
 
 <head>
-	<meta http-equiv="Content-Language" content="en-us">
-	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field, mike naster, ">
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="description" content="Shawnee Mission South High School Track &amp; Field" />
+	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+	<link rel="stylesheet" href="/css/sms.css" />
+
+	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://smstrack.org/feed.xml" />
+
 	<title>Shot and Disc Video Page</title>
-	<link rel="stylesheet" type="text/css" href="/css/sms.css">
 </head>
 
 <body>
-	<div class="throwsheader"></div>
-	<div class="content">
-		<table class="style101" border="0" cellpadding="0" cellspacing="0" width="100%">
-			<tr>
-				<td valign="top" width="100%" align="center">
-					<p>&nbsp;</p>
-					<p align="center" class="contentheader">&nbsp;Videos</p>
-					<p align="center" class="style15">
+	<div class="maindiv grid-container">
+		<div class="throwsheader mainheader"></div>
+		<div class="throwsmenu mainmenu menubar"></div>
+		<div class="left"></div>
+		<div class="middle">
+			<div class="content">
+				<div class="contentheader">Videos</div>
+				<div class="contenttext aligncenter">
+					<p>
 						<a target="_blank" href="/throws/videos2017.htm">2017</a>
 					</p>
-					<p align="center" class="style15">
-						<a target="_blank" href="https://drive.google.com/folderview?id=0B4e6HoJZumBwWEVpTE1qSzNxY0k&usp=sharing">2016</a>
+					<p>
+						<a target="_blank"
+							href="https://drive.google.com/folderview?id=0B4e6HoJZumBwWEVpTE1qSzNxY0k&usp=sharing">2016</a>
 					</p>
 
-					<p class="style25"><span class="style17">[<a class="style1m" target="_blank" href="video_links.htm">Selected
+					<p><span>[<a target="_blank" href="video_links.htm">Selected
 								Videos</a>]</span></p>
-					<p class="style25"><a target="_blank" href="video_archives.htm">
+					<p><a target="_blank" href="video_archives.htm">
 							Archives</a></p>
-				</td>
-				<td height="273"></td>
-			</tr>
-			<tr>
-				<td>
-					<p>&nbsp;</p>
-				</td>
-			</tr>
-		</table>
+				</div>
+			</div>
+		</div>
+		<div class="right"></div>
+		<div class="footer"></div>
 	</div>
-	<div class="footer"></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
-		$(".throwsheader").load("/throws/throwsheader.html");
-		$(".footer").load("/footer.html");
+    $(".throwsheader").load("/throws/throwsheader.html");
+    $(".throwsmenu").load("/throws/throwsmenu.html");
+    $(".footer").load("/footer.html");
 	</script>
 </body>
 
