--- a/throws/links.htm
+++ b/throws/links.htm
@@ -1,59 +1,63 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en-US">
 
 <head>
-	<meta http-equiv="Content-Language" content="en-us">
-	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field, mike naster, ">
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<title>Throwing links</title>
-	<link rel="stylesheet" type="text/css" href="/css/sms.css">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="description" content="Shawnee Mission South High School Track &amp; Field" />
+	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+	<link rel="stylesheet" href="/css/sms.css" />
+
+	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://smstrack.org/feed.xml" />
+
+	<title>Shot and Disc Throwing Links</title>
 </head>
 
 <body>
-	<div class="throwsheader"></div>
-	<div class="content">
-		<table class="style101" border="0" cellpadding="0" cellspacing="0" width="100%">
-			<tr>
-				<td valign="top" width="100%" align="center">
-					<p>&nbsp;</p>
-					<h4 align="center" class="contentheader">2016-17 Throws Camps and Clinics</h4>
-					<div align="center"></div>
-					<p>15-Oct-2016 - <a href="https://drive.google.com/file/d/0B4e6HoJZumBwZW5JZ0FtNmZHOWJjMjhYN3pUUGVsUVJ1TnNV/view?usp=sharing"
-						 target="_blank">Olympic Throws Clinic</a><br>
+	<div class="maindiv grid-container">
+		<div class="throwsheader mainheader"></div>
+		<div class="throwsmenu mainmenu menubar"></div>
+		<div class="left"></div>
+		<div class="middle">
+			<div class="content">
+				<div class="contentheader">Throwing Links</div>
+				<div class="contenttext aligncenter">
+					<h4>2016-17 Throws Camps and Clinics</h4>
+					<div></div>
+					<p>15-Oct-2016<br><a
+							href="https://drive.google.com/file/d/0B4e6HoJZumBwZW5JZ0FtNmZHOWJjMjhYN3pUUGVsUVJ1TnNV/view?usp=sharing"
+							target="_blank">Olympic Throws Clinic</a><br>
 						<a href="https://drive.google.com/file/d/0B4e6HoJZumBweHl4aF8zazZrNFFrLXh0THd0Um44Zi1PdjdN/view?usp=sharing"
-						 target="_blank">Registration Form</a></p>
-					<p>3,4-Dec-2016 - <a href="https://camps.jumpforward.com/MizzouTrackCamps/CampDetail/Index/5400" target="_blank">Mizzou
+							target="_blank">Registration Form</a></p>
+					<p>3,4-Dec-2016<br><a href="https://camps.jumpforward.com/MizzouTrackCamps/CampDetail/Index/5400"
+							target="_blank">Mizzou
 							Winter Throws Camp</a><br>
 					</p>
-					<h4 align="center" class="contentheader">Links</h4>
-					<p align="center"><a href="http://www.dyestat.com/" target="_blank">DyeStat</a><br /> National High School
+					<h4>Links</h4>
+					<p><a href="http://www.dyestat.com/" target="_blank">DyeStat</a><br /> National High
+						School
 						Track&amp; Field News and Stats</p>
-					<p align="center"><a href="http://www.macthrowvideo.com/" target="_blank">Mac Throw
+					<p><a href="http://www.macthrowvideo.com/" target="_blank">Mac Throw
 							Video</a><br /> Lots of downloadable throwing videos</p>
-					<p align="center"><a href="http://www.usatf.com/" target="_blank">USA Track &amp; Field</a></p>
-					<p align="center">
+					<p><a href="http://www.usatf.com/" target="_blank">USA Track &amp; Field</a></p>
+					<p>
 						<a href="http://www.trackandfieldnews.com" target="_blank">Track &amp;
 							Field News</a><br /> &quot;The bible of the sport&quot;</p>
-					<p align="center">
-						<a href="http://www.catchitkansas.com/sports/trackandfield" target="_blank">Catchit Kansas - Track</a></p>
-				</td>
-				<td height="273"></td>
-			</tr>
-			<tr>
-				<td>
-					<p>&nbsp;</p>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<p>&nbsp;</p>
-				</td>
-			</tr>
-		</table>
+					<p>
+						<a href="http://www.catchitkansas.com/sports/trackandfield" target="_blank">Catchit Kansas -
+							Track</a></p>
+				</div>
+			</div>
+		</div>
+		<div class="right"></div>
+		<div class="footer"></div>
 	</div>
-	<div class="footer"></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
 		$(".throwsheader").load("/throws/throwsheader.html");
+		$(".throwsmenu").load("/throws/throwsmenu.html");
 		$(".footer").load("/footer.html");
 	</script>
 </body>
