--- a/south_relays.htm
+++ b/south_relays.htm
@@ -1,46 +1,44 @@
 <!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en-us">
 
 <head>
 	<meta http-equiv="Content-Language" content="en-us">
 	<meta name="description" content="Shawnee Mission South High School Track &amp; Field">
 	<meta name="keywords" content="shawnee mission south track, south track, sms track, south track &amp; field">
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<title>South Relays</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" type="text/css" href="/css/sms.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>South Relays</title>
 </head>
 
+
 <body>
-	<div class="mainheader"></div>
-	<div class="maindiv">
-		<table border="0" cellpadding="0" cellspacing="0" width="100%">
-			<tr>
-				<td valign="top" width="100%">
-					<p>&nbsp;</p>
-					<p class="contentheader">Shawnee Mission South Relays<br>2019</p>
-					<p class="style15">Saturday, March 30th</p>
-					<div style="margin:auto; display:none" id="defaultCountdown"></div>
-					<p style="display:none" class="style15">
-						<a target="_blank" href="https://drive.google.com/file/d/0B4e6HoJZumBwc3VYUFBFTk5IM1Z1Q2IyRHNrWEtSZlJMRk5z/view?usp=sharing">Results</a>
-					</p>
-					<p class="style15">
-						<a href="records/smsrelaysboys.htm">Meet Records</a></p>
-				</td>
-				<td height="273"></td>
-			</tr>
-			<tr>
-				<td>
-					<p>&nbsp;</p>
-				</td>
-			</tr>
-		</table>
+	<div class="maindiv grid-container">
+		<div class="mainheader"></div>
+		<div class="mainmenu menubar"></div>
+		<div class="recordsmenu menubar"></div>
+		<div class="recordsmenu2 menubar"></div>
+		<div class="left"></div>
+		<div class="middle">
+			<div class="contentheader">Shawnee Mission South Relays<br>2019</div>
+			<div class="subcontentheader">Saturday, March 30th
+				<p style="display:none" >
+					<a target="_blank"
+						href="https://drive.google.com/file/d/0B4e6HoJZumBwc3VYUFBFTk5IM1Z1Q2IyRHNrWEtSZlJMRk5z/view?usp=sharing">Results</a>
+				</p>
+				<p >
+					<a href="records/smsrelaysboys.htm">Meet Records</a></p>
+			</div>
+		</div>
+		<div class="right"></div>
+		<div class="footer"></div>
 	</div>
-	<div class="footer"></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
 		$(".mainheader").load("/header.html");
-		$(".recordsheader").load("/recordsheader.html");
+		$(".mainmenu").load("/mainmenu.html");
+		$(".recordsmenu").load("/recordsmenu.html");
+		$(".recordsmenu2").load("/recordsmenu2.html");
 		$(".footer").load("/footer.html");
 	</script>
 	<!-- Start of StatCounter Code for Default Guide -->
@@ -52,7 +50,7 @@
 	<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script>
 	<noscript>
 		<div class="statcounter"><a title="web stats" href="http://statcounter.com/free-web-stats/" target="_blank"><img
-				 class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
+					class="statcounter" src="http://c.statcounter.com/3895026/0/c1dd7cc1/1/" alt="web stats"></a></div>
 	</noscript>
 	<!-- End of StatCounter Code for Default Guide -->
 </body>
