--- a/south_relays.htm
+++ b/south_relays.htm
@@ -16,18 +16,17 @@
 	<div class="maindiv grid-container">
 		<div class="mainheader"></div>
 		<div class="mainmenu menubar"></div>
-		<div class="recordsmenu menubar"></div>
-		<div class="recordsmenu2 menubar"></div>
 		<div class="left"></div>
 		<div class="middle">
 			<div class="contentheader">Shawnee Mission South Relays<br>2019</div>
 			<div class="subcontentheader">Saturday, March 30th
-				<p style="display:none" >
-					<a target="_blank"
-						href="https://drive.google.com/file/d/0B4e6HoJZumBwc3VYUFBFTk5IM1Z1Q2IyRHNrWEtSZlJMRk5z/view?usp=sharing">Results</a>
-				</p>
-				<p >
+				<p>
 					<a href="records/smsrelaysboys.htm">Meet Records</a></p>
+				<p>
+					<a target="_blank"
+						href="https://drive.google.com/file/d/0B4e6HoJZumBwc3VYUFBFTk5IM1Z1Q2IyRHNrWEtSZlJMRk5z/view?usp=sharing">2018
+						Results</a>
+				</p>
 			</div>
 		</div>
 		<div class="right"></div>
@@ -37,8 +36,6 @@
 	<script>
 		$(".mainheader").load("/header.html");
 		$(".mainmenu").load("/mainmenu.html");
-		$(".recordsmenu").load("/recordsmenu.html");
-		$(".recordsmenu2").load("/recordsmenu2.html");
 		$(".footer").load("/footer.html");
 	</script>
 	<!-- Start of StatCounter Code for Default Guide -->
