Schedule added back to main menu

--- a/mainmenu.html
+++ b/mainmenu.html
@@ -1,5 +1,6 @@
 <a href="/index.htm">Home</a>
 <a href="/south_relays.htm">Relays</a>
+<a href="/schedule.htm">Schedule</a>
 <a href="/archives/state_champion_teams.htm">Records</a>
 <a href="/coaches.htm">Coaches</a>
 <a href="/team.htm">Team</a>
