--- a/rules.htm
+++ b/rules.htm
@@ -42,7 +42,7 @@
             </li>
             <li>
               <strong
-                >You are a student first â€“ do well in the classroom.</strong
+                >You are a student first, do well in the classroom.</strong
               >
               <ul>
                 <li>Poor grades will not be tolerated</li>
@@ -84,9 +84,9 @@
           </ol>
         </div>
       </div>
+      <div class="right"></div>
+      <div class="footer"></div>
     </div>
-    <div class="right"></div>
-    <div class="footer"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script>
       $(".mainheader").load("/header.html");
