added copy links

--- a/throws/practice.htm
+++ b/throws/practice.htm
@@ -25,23 +25,19 @@
 				<div class="contentheader">Workout Sheets</div>
 				<div class="contenttext aligncenter">
 					<p>
-						<td align="center"><a
-								href="https://drive.google.com/open?id=0B4e6HoJZumBwMWxicXlXTk1JbG8">Stretching</a></td>
+						<a href="https://drive.google.com/open?id=0B4e6HoJZumBwMWxicXlXTk1JbG8" target="_blank">Stretching</a><br>
 					</p>
 					<p>
-						<td align="center"><a
-								href="https://docs.google.com/spreadsheets/d/1dRRon0mNO20C469KzssJznhFGetjEugEqAU5CK8r6yk/edit?usp=sharing">Workout
-								Phase 1</a></td>
+						<a href="https://docs.google.com/spreadsheets/d/1dRRon0mNO20C469KzssJznhFGetjEugEqAU5CK8r6yk/edit?usp=sharing" target="_blank">Workout Phase 1</a><br>
+						<a href="https://docs.google.com/spreadsheets/d/1dRRon0mNO20C469KzssJznhFGetjEugEqAU5CK8r6yk/copy" target="_blank">(get copy)</a>
 					</p>
 					<p>
-						<td align="center"><a
-								href="https://docs.google.com/spreadsheets/d/101TFIoYXViGJYD-zhuqWq7qgC7idI07JgjNCy5p7fjI/edit?usp=sharing">Workout
-								Phase 2</a></td>
+						<a href="https://docs.google.com/spreadsheets/d/101TFIoYXViGJYD-zhuqWq7qgC7idI07JgjNCy5p7fjI/edit?usp=sharing" target="_blank">Workout Phase 2</a>
+						<a href="https://docs.google.com/spreadsheets/d/101TFIoYXViGJYD-zhuqWq7qgC7idI07JgjNCy5p7fjI/copy" target="_blank">(get copy)</a>
 					</p>
 					<p>
-						<td align="center"><a
-								href="https://docs.google.com/spreadsheets/d/1tJajrgHpOn8OFaq-zQnO5_m_bmjpLHfveR44JzvZP0I/edit?usp=sharing">Workout
-								Phase 3</a></td>
+						<a href="https://docs.google.com/spreadsheets/d/1tJajrgHpOn8OFaq-zQnO5_m_bmjpLHfveR44JzvZP0I/edit?usp=sharing" target="_blank">Workout Phase 3</a>
+						<a href="https://docs.google.com/spreadsheets/d/1tJajrgHpOn8OFaq-zQnO5_m_bmjpLHfveR44JzvZP0I/copy" target="_blank">(get a copy)</a>
 					</p>
 				</div>
 			</div>
