--- a/throws/practice.htm
+++ b/throws/practice.htm
@@ -29,14 +29,14 @@
 					</p>
 					<p>
 						<a href="https://docs.google.com/spreadsheets/d/1dRRon0mNO20C469KzssJznhFGetjEugEqAU5CK8r6yk/edit?usp=sharing" target="_blank">Workout Phase 1</a><br>
-						<a href="https://docs.google.com/spreadsheets/d/1dRRon0mNO20C469KzssJznhFGetjEugEqAU5CK8r6yk/copy" target="_blank">(get copy)</a>
+						<a href="https://docs.google.com/spreadsheets/d/1dRRon0mNO20C469KzssJznhFGetjEugEqAU5CK8r6yk/copy" target="_blank">(get a copy)</a>
 					</p>
 					<p>
-						<a href="https://docs.google.com/spreadsheets/d/101TFIoYXViGJYD-zhuqWq7qgC7idI07JgjNCy5p7fjI/edit?usp=sharing" target="_blank">Workout Phase 2</a>
-						<a href="https://docs.google.com/spreadsheets/d/101TFIoYXViGJYD-zhuqWq7qgC7idI07JgjNCy5p7fjI/copy" target="_blank">(get copy)</a>
+						<a href="https://docs.google.com/spreadsheets/d/101TFIoYXViGJYD-zhuqWq7qgC7idI07JgjNCy5p7fjI/edit?usp=sharing" target="_blank">Workout Phase 2</a><br>
+						<a href="https://docs.google.com/spreadsheets/d/101TFIoYXViGJYD-zhuqWq7qgC7idI07JgjNCy5p7fjI/copy" target="_blank">(get a copy)</a>
 					</p>
 					<p>
-						<a href="https://docs.google.com/spreadsheets/d/1tJajrgHpOn8OFaq-zQnO5_m_bmjpLHfveR44JzvZP0I/edit?usp=sharing" target="_blank">Workout Phase 3</a>
+						<a href="https://docs.google.com/spreadsheets/d/1tJajrgHpOn8OFaq-zQnO5_m_bmjpLHfveR44JzvZP0I/edit?usp=sharing" target="_blank">Workout Phase 3</a><br>
 						<a href="https://docs.google.com/spreadsheets/d/1tJajrgHpOn8OFaq-zQnO5_m_bmjpLHfveR44JzvZP0I/copy" target="_blank">(get a copy)</a>
 					</p>
 				</div>
