teammenu fix for team store

--- a/teammenu.html
+++ b/teammenu.html
@@ -3,5 +3,5 @@
 <a href="forms.htm">Forms</a>
 <a href="roster.htm">Roster</a>
 <a href="/throws/index.htm">Shot/Disc</a>
-<a href="https://store.thegraphicedge.com/eFlyer/main.asp?stid=southtrackfield17"
+<a href="https://smstf19.itemorder.com/sale?read_message=true"
   target="_blank">SMSTF Team Gear</a>
