teammenu team gear

--- a/teammenu.html
+++ b/teammenu.html
@@ -4,4 +4,4 @@
 <a href="roster.htm">Roster</a>
 <a href="/throws/index.htm">Shot/Disc</a>
 <a href="https://smstf19.itemorder.com/sale?read_message=true"
-  target="_blank">SMSTF Team Gear</a>
+  target="_blank">Team Gear</a>
